--- a/calculators/bond_price.html
+++ b/calculators/bond_price.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Рыночная ставка даётся без учёта капитализации (реинвестирования). Для заданного срока погашения можно посмотреть её на <a href="https://www.moex.com/ru/marketdata/indices/state/g-curve/">кривой бескупонной доходности</a>.</p>
 <p>Если облигация дисконтная (бескупонная), то в качестве ставки купона нужно указывать её текущую доходность к погашению.</p>
 <script type="text/javascript" src="/js/preact.umd.js"></script>
@@ -116,6 +116,7 @@
     }
   )
 </script>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
