--- a/calculators/etf_taxation.html
+++ b/calculators/etf_taxation.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Все дивиденды реинвестируются, в конце срока удержания фонд продаётся. Предполагается, что брокерская комиссия уплачивается только при самостоятельном реинвестировании, а для аккумулирующих фондов транзакционные издержки учтены в комиссии за управление.</p>
 <script type="text/javascript" src="/js/preact.umd.js"></script>
 
@@ -323,6 +323,7 @@
     }
   )
 </script>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
