--- a/calculators/etf_us_eu_ru.html
+++ b/calculators/etf_us_eu_ru.html
@@ -85,8 +85,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>По мотивам обсуждений в <a href="https://t.me/RationalAnswer_Chat">чате Павла Комаровского</a>, <a href="https://stockuper.ru/manual/voo-vs-fxus/">калькулятора на Stockuper</a>, и <a href="https://docs.google.com/spreadsheets/d/1GxvnqeEyW4UfphrhJzeUvmYNGxbXNUFvO_patoujPz4/edit#gid=20811719">гугл-таблички</a>. Несколько видоизменённый аналог <a href="/calculators/etf_taxation">этого калькулятора</a>.</p>
 <p>Для начала перечислим основные факты:</p>
 <ol>
@@ -313,6 +313,7 @@
 
     onChange();
 </script>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
