--- a/calculators/index.html
+++ b/calculators/index.html
@@ -56,8 +56,8 @@
                 <p class="description">На странице собраны ссылки на различные мои финансовые калькуляторы.</p>
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <ol>
 <li><a href="/calculators/cards">Расчёт выгоды от использования банковских карт</a><ul>
 <li>Потери от хранения денег в наличности и на счетах под низкий процент</li>
@@ -86,6 +86,7 @@
 <li><a href="/calculators/bond_price">Стоимость облигаций</a></li>
 <li><a href="/calculators/etf_us_eu_ru">Эффективность инвестиций через американские, европейские и российские ETF</a></li>
 </ol>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
