--- a/donate.html
+++ b/donate.html
@@ -50,15 +50,20 @@
         <div class="meta">
         </div>
     </header>
-
     <div class="content">
-        <p>Сайт принципиально делается безо всякого даже прицела на коммерциализацию, на одном энтузиазме. Подогреть энтузиазм, засвидетельствовав размер полезности оного, можно здесь:</p>
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
+        <div class="video-wrap">
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/p3IFKT0niTw" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<p>Сайт принципиально делается безо всякого даже прицела на коммерциализацию, на одном энтузиазме. Подогреть энтузиазм, засвидетельствовав размер полезности оного, можно здесь:</p>
 <div style="display: flex; flex-direction: column">
     <a href="https://ru.liberapay.com/blksv/donate" target="blank">LiberaPay (подписка)</a>
     <a href="https://www.patreon.com/blksv" target="blank">Patreon (подписка)</a>
-    <a href="https://money.yandex.ru/to/410011254416486/200" target="blank">ЯндексДеньги (разово)</a>
-    <a href="https://paypal.me/blksv/200RUR" target="blank">PayPal (разово)</a>
+    <a href="https://yoomoney.ru/to/410011254416486/300" target="blank">YooMoney (разово)</a>
+    <a href="https://paypal.me/blksv/5USD" target="blank">PayPal (разово, только из-за пределов РФ)</a>
 </div>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
