--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
         <div class="meta">
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <div class="clearfix">
 <p><div class="product-badge" style="float: right; width:50%">
     <img src="/images/bankir.jpg" />
   </div></p>
 <p>Хобби у меня такое — деньги считать. Свои, чужие — не важно. Вот и рассказываю здесь, где чего насчитал, к каким выводам пришёл и что из-за них сделал, или только собираюсь, или даже не собираюсь, но просто можно при надобности.</p>
 </div>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
