--- a/literacy/brokers.html
+++ b/literacy/brokers.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Необходимость посредника для выхода на биржу — это анахронизм, но нам с ним некоторое время ещё жить. Выбираем правильного брокера.</p>
 <div class="toc">
 <ul>
@@ -549,6 +549,7 @@
 </div>
 <h2 id="_11">Где почитать/спросить о брокерах</h2>
 <p><a href="https://www.banki.ru/forum/?PAGE_NAME=list&amp;FID=21">На форуме склянок</a></p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
