--- a/literacy/cards.html
+++ b/literacy/cards.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>В неустанной заботе об удобстве клиентов и своей выгоде, банки изобретают всё более совершенные способы оплаты покупок. Банковский пластик, на данный момент, — уже пройденная вершина, в связи с развитием технологий бесконтактной оплаты, однако организационно это всё ещё старые добрые карты. О них и поговорим.</p>
 <div class="toc">
 <ul>
@@ -119,6 +119,7 @@
 <p>Даже неиспользуемая кредитка болтается в вашей кредитной истории и смущает банки, от которых вам могут впоследствии понадобиться какие-то плюшки, бесплатные или хотя бы дешёвые деньги.</p>
 <p>Набирающие популярность карты рассрочки — те же длинногрейсовые кредитки, только с увеличенными ежемесячными платежами (вместо 5% — треть-четверть суммы покупки).</p>
 <p>Банки неохотно делятся информацией сколько клиентов использует кредитку правильно — не платя банку комиссий (кроме годового обслуживания, если есть) и процентов, — но проскакивает информация что не более 30%. Выгода банков, при таких процентах, колоссальная и на привлечение новых пользователей кредиток денег не жалеют. А свою выгоду посчитаем на <a href="/literacy/cardscalc">практике</a>.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
