--- a/literacy/cardscalc.html
+++ b/literacy/cardscalc.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Основные аргументы в пользу банковских карт — это их удобство и выгода вплоть до халявы. Однако финансово грамотный человек не ищет халявы, а минимизирует свои расходы и риски, которые <a href="/literacy/notaboutmoney">не всегда денежные</a>, сообразуясь с собственной психологией и дисциплиной.</p>
 <div class="toc">
 <ul>
@@ -244,6 +244,7 @@
 <h2 id="_7">О закрытии карт</h2>
 <p>Бесплатные дебетовые карты могут вполне себе и лежать на полке, ожидая своего часа. Бесплатные кредитки с небольшими лимитами — тоже. Только отслеживайте акутуальные условия по ним, вдруг они перестанут быть бесплатными. Платные карты и кредитки со значительными лимитами, если становятся не нужны, лучше закрывать.</p>
 <p>Единственный способ закрыть карту — написать в банке соответствующее заявление (и лучше взять с собой подтверждающий документ). Ни оставление карты на полке, ни даже её блокировка не прекращают обслуживание банком счёта карты (блокировка действует только на стороне платёжной системы). Соответственно, все лимиты будут открытыми, а комиссии — списываться (возможно, в долг или овердрафт под проценты).</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
