--- a/literacy/credits.html
+++ b/literacy/credits.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Если вам не интересна теория — переходите сразу к <a href="/calculators/credits">калькулятору</a>.</p>
 <p>Кредит — это способ воспользоваться деньгами банка за некоторую плату. Очевидно, пользоваться кредитами имеет смысл только тогда, когда это принесёт больший доход, чем будет выплачено процентов. Однако рассчитывать кредиты довольно сложно и по интернетам разгуливает изрядное количество дури по этому поводу (у одного — <a href="http://capitalgains.ru/obrazovanie/lichnye-finansy/annuitetnaya-shema-pogasheniya-kredita.html">аннуитеты впаривают</a>, другой — <a href="https://daskonto.ru/banki/na-puti-k-zrelosti">взял кредит под 11%г, чтобы положить под 7</a> и считает, что это выгодно).</p>
 <p>Разберёмся сперва с формами погашения. При аннуитетных платежах вы всегда отдаёте банку одну и ту же сумму, часть суммы идёт в погашение процентов, а часть — кредита. Дифференцированный платёж состоит из двух частей: фиксированной суммы в погашение кредита, и платёж по процентам на остаток задолженности. В схематичном виде выглядит это так (здесь на вертикальной оси выплаты по долгу и процентам представлены в процентах от аннуитетного платежа, а остаток по кредиту — от его начальной суммы, по горизонтальной оси — годы):</p>
@@ -93,6 +93,7 @@
 
 <p>Сравниваем сценарии, где мы поддерживаем резерв по выплатам на полгода вперёд (направляя начисленные проценты на погашение кредита, а когда он уменьшится до размера резерва — погашая его полность.) и где сразу погашаем часть кредита на размер резерва (но не уменьшая при этом ежемесячный платёж: всё-таки, выгоднее гасить кредит раньше). Как видно, реальный размер выплат с учётом инфляции различается незначительно.</p>
 <p>Статья будет пополняться новыми разборами.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
