--- a/literacy/deposits.html
+++ b/literacy/deposits.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Прежде чем рассказывать о банковских сервисах по размещению денег, хочу ещё раз произнести фундаментальную истину по их поводу. Деньги, которые вы отнесли в банк, — <strong>больше не ваши деньги</strong>, это деньги банка. В обмен на них вы получили обязательство банка по возврату вам долга и оплаты его использования (в форме процентов или услуг). Точно так же, как деньги полученные вами в кредит от банка — больше не деньги банка, в обмен на них банк получил ваше обязательство по возврату долга и оплаты его использования. Кредит и депозит — это полностью симметричные операции. К сожалению, маркетологи банков часто сами этого не осознают, придумывая очень странные схемы начисления, например, процентов на остатки по картам и счетам, а юридически они потом оформляются ещё страннее (потому что это явная нелепица: определять стоимость заимствования в зависимости от совершения заимодавцем (не должником!) не связанных с займом действий).</p>
 <div class="toc">
 <ul>
@@ -120,6 +120,7 @@
 <p>Некоторые банки на остаток по своим дебетовкам начисляют весьма высокие проценты (иногда даже не выдвигая дополнительных требований, или делая их несущественными). Такие карты называют <em>доходными</em>, ими вполне можно пользоваться как обычным накопительным счётом, но для этого нужно снизить доступные лимиты на операции по карте до уровня текущих расходов (если они будут совершаться с этой карты).</p>
 <h2 id="_5">Проверка надёжности банка</h2>
 <p>Я смотрю аналитические отчёты по банкам на этих сервисах: <a href="http://kuap.ru/">Куап</a> — подробная финансовая отчётность и здоровье банков, <a href="http://www.analizbankov.ru/">Анализ банков</a> — то же, но есть аналитические отчёты по банкам на понятном простом обывателю языке <a href="http://www.analizbankov.ru/bank.php?BankId=tin-koff-bank-2673&amp;BankMenu=nadezhnost">например, Тиньков</a>.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
