--- a/literacy/exchange.html
+++ b/literacy/exchange.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Рассмотрение инфраструктуры фондового рынка начнём с её центрального элемента — биржи. Конкретика здесь касается Московской биржи, но все биржи устроены примерно одинаково.</p>
 <div class="toc">
 <ul>
@@ -123,6 +123,7 @@
 <p>Деньги от продажи или бумаги после покупки вы получите в начале следующего торгового дня для сделок с облигациями, или следующего за ним для всех остальных бумаг. Это так называемые режимы торгов T+1 и T+2 (текущий день обозначается T0). Право на НКД и дивиденды вы тоже получите на следующий или через день соответственно.</p>
 <p>При этом, деньги, причитающиеся от продажи в T+2 сразу доступны для покупок в T+2, а от продажи в T+1 — для покупок в T+1 и T+2. Брокер рассчитывает доступные остатки денег и ценных бумаг на каждую из дат (T0, T+1, T+2), и, если у вас не подключено маржинальное кредитование, никакой из этих остатков не должен опускаться ниже нуля. На зарубежных биржах есть дополнительное ограничение: при <em>заключении сделки</em> по продаже ценной бумаги, её покупка уже должна быть полностью оплачена (внесением денег на счёт или зачислением денег от расчётов по другой сделке).</p>
 <p>Каким образом хранятся и передаются бумаги — в следующей статье.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
