--- a/literacy/fund_selection/index.html
+++ b/literacy/fund_selection/index.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p><em>Статья написана для проекта <a href="https://indexera.io/">Indexera</a>, которому я разрабатываю алгоритмы планирования и анализа пассивных портфелей, а также прочей инвестиционной математики, в том числе и представленные далее методики. Ими уже можно там воспользоваться (правда пока только преимущественно для российских фондов).</em></p>
 <div class="toc">
 <ul>
@@ -307,6 +307,7 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
 <li>Оставьте только те фонды, которые вошли в обе группы лидеров. Если выбирать особо не из чего, последовательно вычёркивайте худшие фонды из каждой группы (один из первой, один из второй), пока не останется только один фонд, присутствующий в обоих.</li>
 <li>Выберите тот, скорость отставания которого минимальна (предполагается, что отставание выплачивающих фондов посчитано с учётом уплаты налога и расходов на реинвестирование), или единственный оставшийся. Но если скорость отставания (уже на всей доступной истории, а не на окне сравнения) такова, что ожидаемая доходность вложений в фонд (= ожидаемая доходность класса активов – скорость отставания) перестаёт оправдывать рисков инструмента, или средняя накопленная ошибка отслеживания превышает 5%, то от такой инвестиции лучше отказаться.</li>
 </ol>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
