--- a/literacy/howto.html
+++ b/literacy/howto.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <h2 id="_1">Осознаём</h2>
 <p>Ключевое слово нашего времени — <em>осознанность</em>. Осознанное отношение к деньгам, осознанное потребление, осознанное богатство — вот наши цели.</p>
 <ol>
@@ -271,6 +271,7 @@ calcRetirement();
 <p>Profit!</p>
 </li>
 </ol>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
