--- a/literacy/index.html
+++ b/literacy/index.html
@@ -56,8 +56,8 @@
                 <p class="description">Циклы статей о финансовой грамотности</p>
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <h2 id="_1">Основы</h2>
 <ol>
 <li><a href="/literacy/intro">Введение</a></li>
@@ -102,6 +102,7 @@
 <li><a href="/literacy/zero_sum">Рынок как игра с нулевой суммой</a></li>
 <li><a href="/literacy/fund_selection">Выбор индексных фондов</a></li>
 </ol>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
