--- a/literacy/instruments.html
+++ b/literacy/instruments.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Строго говоря, <em>доход</em> можно получить единственным способом — создать и продать ценность. Всё остальное — либо подарки, либо компенсации, либо воровство.</p>
 <p>Создание и купля-продажа ценностей — это про работу и бизнес, тут каждый во что горазд; охота за подарками и воровство — занятия ненадёжные; а вот за что платят компенсации? Платят их за <em>риск</em>. Все операции с финансовыми инструментами — это обмен одних рисков на другие.</p>
 <div class="toc">
@@ -211,6 +211,7 @@
 (Привет тем, у кого «Америка только растёт».)</p>
 <p>Видно, что до 2008г доходность по американским акциям не могла обогнать российскую инфляцию вкупе с обесценением доллара относительно рубля. Российский же рынок уверенно рос, пока не <em>перерос себя</em> к тому же 2008г и совершенно перестал приносить прибыль после восстановления (восстановился он на возврате стоимости нефти к докризисным значениям в 2011г, но с тех пор она падает, доходность индекса около нуля держат другие отрасли), тогда как американский показал четырёхкратную доходность. Также глазу заметна куда бо́льшая стабильность американского индекса — это результат сбалансированности экономических факторов.</p>
 <p>Важное свойство общерыночного риска — обоюдоострость, причём опаснее та сторона, что завышает стоимость активов выше справедливой. Потому что мы можем не продавать доходные активы себе в убыток, но вот вероятность купить их по ценам, которые приведут к отрицательной доходности на ближайшие пару десятилетий (как американские акции в 2000 или российские в 2008) — есть всегда, и её реализации надо старательно избегать.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
