--- a/literacy/instruments/bonds.html
+++ b/literacy/instruments/bonds.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <div class="toc">
 <ul>
 <li><a href="#_1">Общие представления</a></li>
@@ -468,6 +468,7 @@
 <li><a href="https://bonds.finam.ru/">Справочник по выпускам облигаций Финама</a> — здесь надо найти выбранные выпуски, посмотреть графики платежей и документы по выпуску.</li>
 <li><a href="https://www.e-disclosure.ru/">Интерфакс: обязательное раскрытие отчётности эмитентов</a> — здесь надо найти и почитать отчётность по выбранному эмитенту облигаций, если это корпоративная облигация, и оценить, насколько вы доверяете ему свои деньги.</li>
 </ul>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
