--- a/literacy/instruments/cash.html
+++ b/literacy/instruments/cash.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Сразу начну с того, что если вы где-то в финансовой литературе встречаете слово «кэш» (cash), то это ни разу не про бумажки и монетки. Это про остатки на банковских счетах, облигации с погашением в ближайший год и прочее подобное. Потому что идиотов хранить деньги в физической форме настолько мало, что о ней даже упоминать негде, и удобное слово изменило своё значение. У нас таких ещё хватает, поэтому вот список, почему так делать не надо.</p>
 <ul>
 <li>Легко уничтожить. Пожар, потоп, грибок. Да даже банальные крысы или домашние животные с удовольствием оставят от вашей заначки только мелкие клочки.</li>
@@ -77,6 +77,7 @@
 <img src=/literacy/instruments/cash_usdrur.svg style="width: 100%; height: 50wv" /></p>
 <p>Т.е. от 1 рубля к 2020г осталось 13 копеек, а от 1 доллара — 29 центов.</p>
 <p>Исходные данные: <a href="https://www.cbr.ru/currency_base/dynamics/">курсы валют</a>, <a href="https://www.cbr.ru/hd_base/mkr/mkr_base/">ставки межбанковского рынка</a> и <a href="https://www.cbr.ru/hd_base/ruonia/">RUONIA</a> (фактическая стоимость денег), <a href="https://www.gks.ru/storage/mediabank/tab-potr.html">индекс потребительских цен</a> (динамика расходов среднестатистического потребителя). При расчёте обесценения в каждом месяце брался максимум из монетарного и потребительского обесценения.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
