--- a/literacy/instruments/deposits2.html
+++ b/literacy/instruments/deposits2.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Подробно нюансы работы с банковскими счетами и вкладами описаны <a href="/literacy/deposits">в отдельной статье</a>. Здесь рассмотрим их специфику именно как инструмента для сбережений.</p>
 <p>Деньги на банковских счетах, как и наличные, доступны мгновенно но, в отличие от них, обесцениваются медленнее, как правило, — из-за начисляемых на остаток процентов. Для вкладов сроком от года до трёх этот процент как правило примерно равен инфляции. В качестве грубого ориентира по реальной скорости обесценения денег можно взять ключевую ставку ЦБ: цены в среднем растут именно с этой скоростью, а отличие от неё индекса потребительских цен преимущественно объясняется изменением структуры потребления и налогов.</p>
 <p>Основные финансовые риски вкладов.</p>
@@ -77,6 +77,7 @@
 <p>Кризисные явления в экономике часто заставляют даже весьма надёжные банки предлагать доходности значительно выше ожидаемой инфляции. В этом случае целесообразно открывать долгосрочные пополняемые вклады, чтобы зафиксировать привлекательную ставку, и переносить туда часть денег из более агрессивных инструментов.</p>
 <p>После введения страхования вкладов стало модным открывать вклады в мусорных банках, предлагающих ставки заметно выше рыночных. Дескать, АСВ всё равно возместит и вложенные деньги, и проценты. По факту, это поощрение мошенников к ограблению налогоплательщиков. Взносы в АСВ — это наши с вами недополученные проценты со вкладов, и наши налоги, когда в АСВ деньги заканчиваются. Практика АСВ возмещать начисленные проценты по вкладам должна быть прекращена (или, по крайней мере, они должны возмещаться в размере не более 2/3 ключевой ставки).</p>
 <p><a href="https://www.banki.ru/products/deposits/">Поиск вкладов</a> (всегда внимательно читайте условия вклада на сайте банка), оценка надёжности банков: <a href="http://kuap.ru/">Куап</a>, <a href="http://www.analizbankov.ru/">Анализ банков</a>.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
