--- a/literacy/instruments/gold.html
+++ b/literacy/instruments/gold.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <div class="toc">
 <ul>
 <li><a href="#_1">Производство, потребление и историческая динамика</a></li>
@@ -528,6 +528,7 @@
 </table>
 <h3 id="_7">Корзина биржевых товаров</h3>
 <p>Оказывается ещё более рискованным активом, чем корзина драгметаллов, и места в исторически оптимальных портфелях ей вовсе не остаётся. В качестве исходных данных был взят <a href="https://www.investing.com/indices/sp-gsci-commodity-total-return-historical-data">S&amp;P GSCI Commodity Total Return Index</a>.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
@@ -546,7 +547,7 @@
     </main>
 
     <footer>
-
+<div class="prevupnext"><a class="prev" href="/literacy/instruments/bonds"> &lt;&lt; Облигации </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/instruments/realty"> Недвижимость &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
