--- a/literacy/instruments/realty.html
+++ b/literacy/instruments/realty.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <div class="toc">
 <ul>
 <li><a href="#_1">Арендная жилая недвижимость</a></li>
@@ -114,6 +114,7 @@
 <p>Но, опять же, в России таких нет, нужно выходить на зарубежного брокера.</p>
 <p>Если вас привлекает какой-то отдельный сегмент, можно купить долю в недвижимости под управлением конкретной УК — REIT. Но в этом случае вы подписываетесь под операционные риски данной конкретной УК, которые сопоставимы с рисками отдельного объекта недвижимости (хотя в случае REIT ваша ожидаемая доходность будет всё-таки выше — из-за того, что рынок оценивает и включает эти риски в стоимость пая, что проблематично на неликвидном рынке физической недвижимости), поэтому я бы всё-таки рекомендовал ETF — фонды из множества REIT'ов.</p>
 <p>Однако, есть исследование, что <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2965146">динамика фонда REITов представима как портфель из 66% недооценённых компаний малой капитализации + 34% корпоративных облигаций</a>, причём такой портфель доходнее. Т.е. если в вашем портфеле уже есть и то, и другое, то дополнительное добавление в него фондов на недвижимость, скорее всего, практически не уменьшит риски, но заметно снизит ожидаемую доходность.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
