--- a/literacy/instruments/stocks.html
+++ b/literacy/instruments/stocks.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <div class="toc">
 <ul>
 <li><a href="#_1">Что такое акции</a></li>
@@ -260,6 +260,7 @@
 </tbody>
 </table>
 <p>Исходя из этого принимается, что доходность диверсифицированного портфеля из индексов на акции разных стран будет составлять приблизительно 5%г выше инфляции. При этом, несмотря на диверсификацию, просадка такого портфеля может составлять до 80%, а время восстановления капитала после просадки — более 10 лет.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
