--- a/literacy/moneytransfer.html
+++ b/literacy/moneytransfer.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Когда человек начинает активно пользоваться банковской системой, у него неизбежно возникает потребность перемещать деньги между разными банками. Об этом и поговорим.</p>
 <div class="toc">
 <ul>
@@ -166,6 +166,7 @@
 <li>по возможности рассчитываться внутри банка.</li>
 </ul>
 <p>Если вы в самом деле не занимаетесь никакой противозаконной деятельностью, соблюдать эти правила нетрудно.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
