--- a/literacy/notaboutmoney.html
+++ b/literacy/notaboutmoney.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <div class="product-badge" style="float: right">
   <img src="/images/lifecycle.svg" class="product-badge" />
 </div>
@@ -110,6 +110,7 @@
 <p>Вопрос меры и баланса. Отсутствие материального капитала само по себе создаёт психологическое давление, провоцируя избыточные затраты энергии на работу и, одновременно, избыточное потребление как ответ на эти затраты. Обратное тоже верно, т.к. материальный капитал не создаёт счастья — только личный и социальный. Поэтому бережливость — это путь к накоплению счастья за счёт охочих до нашей энергии корпораций и дельцов.</p>
 </li>
 </ol>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
