--- a/literacy/reserves.html
+++ b/literacy/reserves.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Весь разговор о личных финансах — это разговор вокруг правильного формирования и расходования <em>резервов</em>. Они выполняют не только очевидную роль стабилизатора финансов, но и сбережения, планирования и даже экономии (один из важнейших способов экономить — приобретать нужное не в последний момент крайней необходимости, по имеющимся на этот момент не самым низким ценам и возможно даже в кредит, а в благоприятный момент на зарезервированные деньги).
 Тем смешнее, что руководства к личным финансам обычно говорят лишь о <em>«подушке безопасности»</em> — резерве в размере примерно полугодовых текущих расходов на случай потери работы, чтобы можно было в более-менее комфортной обстановке искать новую. А для всего остально предлагают другие термины и другие методы.</p>
 <p>Я предлагаю пользоваться единым универсальным подходом с точки зрения работы с резервами.</p>
@@ -105,6 +105,7 @@
 <p>Отдельно надо сказать о программах <em>накопительного и инвестиционного страхования жизни</em>, которые хотя и очень активно продвигаются именно именно для пенсионного обеспечения, не решают задач ни накопления, ни инвестиций, ни страхования.
 Почему. Во-первых, за страхование рисков вы всё равно заплатите, причём, скорее всего, дороже обычного рыночного тарифа: т.к. вы не можете ни настроить его параметры, ни увидеть отдельной строкой его стоимость, чтобы сравнить с другими компаниями. Во-вторых, вы заплатите комиссию страховому агенту (такие полисы обычно любят навязывать банки и «финансовые советники»), а это, <a href="http://www.cbr.ru/content/document/file/47303/review_insure_18q1.pdf">по данным ЦБ РФ</a> — больше 20% от взносов. В-третьих, из-за необходимости вернуть строго установленную сумму в указанный срок страховые компании очень сильно ограниченны в выборе инвестиционных инструментов и итоговая доходность едва ли будет превышать инфляцию (но именно доходность сверх инфляции и позволяет за обозримые сроки создать адекватный пенсионный резерв). Ко всему прочему, вам придётся заплатить крупный штраф, если вы потребуете выплатить накопленные деньги не дождавшись прописанного в договоре события. И вы подставляетесь под риск банкротства страховой (который за время действия программы — обычно более пяти лет — довольно вероятен): страхования их обязательств по аналогии с банками у нас нет (кроме ОСАГО), да и сами уплаченные вами по программе страхования деньги безусловным обязательством страховой не являются (в отличие от банковского депозита).</p>
 <p>Эти программы используются обычно для сокрытия денег от судебных приставов в случае имущественных споров и тайной их передачи третьим лицам (именно потому, что уплаченная вами страховая премия — это не ваши деньги и не обязательство страховой перед вами, а ваши траты и доход страховой; обязательство же по выплате у страховой наступит только при страховом случае и только перед теми, кто указан в договоре страхования).</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
