--- a/literacy/returns/index.html
+++ b/literacy/returns/index.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <div class="toc">
 <ul>
 <li><a href="#_1">Доходность</a></li>
@@ -119,6 +119,7 @@
 <p>Однако рыночная цена хорошо определена только для ликвидных инструментов, за которыми следят множество аналитиков. В неликвидных ситуация другая. Крупному капиталу они неинтересны, поэтому сделки совершаются редко, а текущие цены продавцов и покупателей скорее отражают их собственную ситуацию, чем рыночную оценку ожидаемой доходности. Спред также очень велик. Профессионал здесь может найти очень привлекательные предложения, непрофессионал — скорее очень сильно переплатит за то, от чего потом не сможет избавиться без больших убытков (таких предложений всё-таки подавляющее большинство).</p>
 <p>Другая особенность неликвидных инструментов — в случае завышенной цены (= отрицательной ожидаемой доходности) их нельзя взять взаймы и продать, получив положительную доходность и, одновременно, сбив цену. Поэтому многие инструменты даже на бирже продаются под отрицательную ожидаемую доходность. Часто с помощью маркет-мейкеров: участников рынка, по договору с эмитентом ценной бумаги, поддерживающих заданную ширину спреда между очередями на покупку и продажу бумаги. Маркет-мейкер зарабатывает на ширине спреда, эмитент зарабатывает на выпуске бумаг по завышенной цене. Объём обязательств маркет-мейкера ограничен, и в случае чего из бумаги успеют выйти только самые шустрые. Формально ликвидность есть, и спред может быть достаточно узкий, но они обеспечиваются не рынком, а самим эмитентом в его интересах.</p>
 <p>Несмотря на всё это, биржа остаётся достаточно прозрачным механизмом. Можно оценить и величину спреда, и объём сделок, и количество участников рынка в очередях на покупку/продажу... и исходя из этого делать хотя бы приблизительные выводы о справедливости предлагаемой цены. Если вы берётесь покупать/продавать <em>по объявлениям</em> или, хуже того, <em>по рекламе</em> — вы однозначно должны уметь считать ожидаемую доходность лучше, чем ваш контрагент.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
