--- a/literacy/stocks.html
+++ b/literacy/stocks.html
@@ -60,9 +60,10 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Статья перенесена <a href="/literacy/instruments/stocks">сюда</a>.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
