--- a/literacy/taxes.html
+++ b/literacy/taxes.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Здесь я постарался систематизировать только базовую информацию, которая может быть интересна обычному человеку. Если вас занесло на внебиржевой или срочный рынок, вы уже профессионал, и самостоятельно разберётесь и с налоговым кодексом, и со своим брокером, и со своим налоговым инспектором.</p>
 <p>Если у вас только один брокерский счёт (или один счёт + ИИС), то в подавляющем большинстве случаев вам ничего делать не нужно. Брокер сам и рассчитает, и удержит, и отчитается в ФНС. Если брокер чего-то недоудержал, налоговая сама вам пришлёт уведомление скольно нужно доплатить. Сделать это нужно будет до 1-го декабря.</p>
 <div class="toc">
@@ -132,6 +132,7 @@
 <li>На дивиденды и купоны — в момент выплаты согласно законодательству эмитента. Доплату до 13% нужно рассчитать, задекларировать и уплатить в России самостоятельно.</li>
 <li>По остальным операциям — не удерживается. Доход по правилам выше нужно рассчитать, задекларировать и уплатить 13% в России самостоятельно.</li>
 </ol>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
@@ -150,7 +151,7 @@
     </main>
 
     <footer>
-
+<div class="prevupnext"><a class="prev" href="/literacy/instruments"> &lt;&lt; Краткий обзор инструментов сбережения. Сколько и во что вкладывать </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/iis"> Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
