--- a/literacy/zero_sum.html
+++ b/literacy/zero_sum.html
@@ -86,10 +86,10 @@
 
         </div>
     </header>
-
     <div class="content">
             <input id=show-math type=checkbox checked=true />
 
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <div>
 <p>Разберём известный <a href="https://web.stanford.edu/~wfsharpe/art/active/active.htm">аргумент Шарпа</a> о том, что</p>
 <ol>
@@ -142,6 +142,7 @@
 <p>Таким же образом можно оценить потери «пассивных» фондов (и доходы активных) на ребалансировке между классами активов, которые, при оборачиваемости портфеля таких фондов около 15% в год, в пределе выливаются уже в заметные 0,75%г при «коэффициенте ликвидности» равном 0,1 (к слову, доля таких фондов на рынке сейчас порядка 1%, так что пока эти потери меньше 0,0075%г; всего же активы пассивных фондов составляют примерно 10–15% капитализации фондового рынка, и то это с учётом фондов на различные сегменты рынка, а также факторных, которые уже совсем не пассивные). Частный же инвестор на своей ребалансировке терять практически не будет, т.е. его время ребалансировки непредсказуемо и, следовательно, неэксплуатируемо.</p>
 <p>Гипотезы об эффективности/неэксплуатируемости рынков позволяют сделать более сильное утверждение о невозможности систематического получения доходности выше среднерыночной даже внутри группы активных инвесторов и даже с учётом перетока капитала через границы рынков (а значит, необязательности для пассивного инвестора иметь строго рыночный портфель, и отсутствия систематически проигрывающих групп активных инвесторов). Однако, они уже не являются математическими доказательствами и работают не всегда (хотя, с повышением информационной прозрачности рынков, можно говорить, что уже практически всегда). Но об этом в другой статье.</p>
 </div>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
