--- a/notes/aboutme.html
+++ b/notes/aboutme.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Сейчас я позиционирую себя инженером информационных систем и кандидатом физ.-мат. наук. Инженером — по первому образованию и основному роду деятельности, а кандидатом — ну так исторически сложилось, что защитил диссер в области моделирования горения твёрдых ракетных топлив (в Ижевске вообще, плюнь в толпу — зацепишь ракетчика). Отсюда склонность к рациональности, систематичности, сырым данным и математическим моделям.</p>
 <p>Ни финансового образования, ни опыта работы в этой сфере не имею, хотя экономикой увлекался. Так что имейте в виду, что всё на этом сайте написанное — рассуждения дилетанта.</p>
 <p>Вырос в небогатой семье, привык жить скромно, поэтому деньги копились. К 2014-му году накопилось на квартиру. Ещё с ранней весны в воздухе носилось ощущение, все вокруг говорили, что сейчас всё резко станет плохо и надо сбережения как-то спасать, но понимания что и как делать — не было. В итоге я так и купил квартиру, «на панике», оставшись не только без денег, но и с кредитом (хотя небольшим), и решил больше таких ситуаций не допускать.</p>
@@ -70,6 +70,7 @@
 <p>Через год закрыл кредит и открыл брокерский счёт (самый дешёвый, в Промсвязьбанке, он и сейчас остаётся основным, хотя, после кратного снижения комиссий, я теперь всем рекомендую Сбер). В начале года выкладываю в блоге динамику (вот <a href="/blog/2019-01-02">к явнварю 2019-го</a>).</p>
 <p>К 2018-му тема инвестиций стала совсем горячей. Семинары-вебинары-лекции стали проводить все кому ни лень, и часто без должной подготовки. И почти все, очевидно, — с целью заработать. Продвигают или свои услуги по финансовому консультированию и составлению «личных финансовых планов» (что довольно бессмысленно), или финансовые продукты с грабительскими условиями или комиссиями.</p>
 <p>Тут мне захотелось донести свою, основанную на личном опыте как сбережений, так и анализа данных и литературы, позицию. Тоже не обошлось без своего триггера, которым стала фраза представителя ЦБ на одной из таких лекций: «можно ещё в доверительное управление деньги передать, и тоже получить хорошую доходность» (на самом деле, конечно, получить можно только убытки: <a href="https://seekingalpha.com/article/3971167-target-hedge-fund-allocation-zero">статья со статистикой за последние 10 лет</a>).</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
