--- a/notes/accounting.html
+++ b/notes/accounting.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <h2 id="_1">Причины</h2>
 <p>Так как потребности у меня скромные, и переплачивать ни за что не склонен, проблем с несходящимся бюджетом не возникает. Зачем же тогда учёт?</p>
 <p>Первая причина — так исторически сложилось: бюджет не всегда сходился. В 2015-м, когда всё это началось, потребность в учёте, причём ежедневном и до последнего рубля, была настоятельная: 15Кр/мес кредита при окладе в 20Кр (плюс сколько-то премий-грантов, сколько-то от it-проектов, которые тогда только начинались: всего очень немного и нерегулярно). Тогда я (немного поиграв с <a href="https://www.ledger-cli.org/">Ledger</a> и <a href="http://furius.ca/beancount/">beancount</a>) написал скрипт, который читает текстовый файл такого вида</p>
@@ -97,6 +97,7 @@
 <p>Когда все остатки сведены, запрашиваю общую статистику по доходам/расходам за месяц и оцениваю, всё ли в пределах разумного.</p>
 </li>
 </ol>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
