--- a/notes/bonds_in_portfolio/index.html
+++ b/notes/bonds_in_portfolio/index.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Облигации в инвестиционном портфеле могут играть множество ролей:</p>
 <div class="toc">
 <ul>
@@ -104,6 +104,7 @@
 <p>За несколько лет (5–10) до предполагаемого «выхода на пенсию» выделяем в портфеле долю, эквивалентную планируемым годовым расходам, и наполняем её облигациями, которые будут погашены к моменту выхода. В следующий год — приобретаем облигации на последующий год пенсии. Таким образом, к нашей пенсии мы будем иметь «лестницу» из выпусков облигаций, которые гасятся в последовательные годы. Каждый год добавляем следующий дальний выпуск.</p>
 <p>Я не случайно сказал о <em>доле</em>, эквивалентной годовым расходам, а не о <em>сумме</em> годовых расходов. Если в момент планирования наши предполагаемые изъятия из портфеля составляют 300Кр/год, а сам портфель — 3Мр, то мы определяем резервировать на каждый год пенсии 10% портфеля max 300Кр. Это позволяет ориентироваться в относительной цене акций: когда рынок падает мы приобретаем меньше облигаций, а когда растёт — навёрстываем недокупленное в годы просадок до желаемой величины расходов. Хотя иногда нам придётся довольствоваться меньшими суммами, если просадка оказывается длинной и глубокой, но мы хотя бы будем точно знать, сколько мы можем потратить, чтобы не остаться скоропостижно без капитала.</p>
 <p>О том, как спланировать и рассчитать расходование пенсионного капитала будет отдельная статья.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
