--- a/notes/capital.html
+++ b/notes/capital.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p><a href="/literacy/notaboutmoney">Обзор видов капитала</a> я уже сделал, оговорившись, что финансовый капитал не единственный и даже не обязательный. Однако он универсален, понятен и в наибольшей степени контролируется своим обладателем. Поэтому речь о нём.</p>
 <ol>
 <li>
@@ -76,6 +76,7 @@
 </li>
 </ol>
 <p>Поэтому меня раздражают рассуждения вроде «нет смысла сегодня откладывать рубль, если завтра получишь десять», или «нет смысла сберегать, если впереди всемирная катастрофа или всеобщее благоденствие», или «можно уехать в деревню — там государственной пенсии хватит». Они смотрят на капитал только как на отложенное потребление, хотя это не единственная и, может быть, даже не самая важная его роль.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
