--- a/notes/contributions/index.html
+++ b/notes/contributions/index.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Практически всегда, когда речь идёт об анализе риска и доходности различных инвестиционных инструментов или стратегий управления портфелем, смотрят только на изменение начальной суммы инвестиции, а довложения не рассматривают. Хотя очевидно, что в реальном портфеле довложения есть, и это сказывается на его динамике.</p>
 <p>Посмотрим на эту ситуацию подробнее. При этом сразу можно сказать, что довложения привносят сразу же огромное количество свободных параметров в задачу (начальный капитал, размер довложений и его динамика, интервал между довложениями, ...). Так что если кто-то хотел бы найти исследование, которое точно описывает его ситуацию, у него едва ли получится это сделать. Эта заметка не исключение, но и цель у неё другая.</p>
 <p>Для начала посмотрим на динамику портфеля с довложениями против портфеля без них (на примере истории SnP500 по <a href="http://www.econ.yale.edu/~shiller/data/ie_data.xls">данным Шиллера</a>). На протяжении 20 лет будем ежегодно вкладывать в портфель сумму, равную начальной инвестиции, индексируя её на инфляцию. Каждая линия на графике — история портфеля после такого довложения (самая нижняя — только начальная сумма). График в логарифмическом масштабе, чтобы рост/падение с любой точки графика на равное количество процентов были визуально одинаковы.</p>
@@ -69,6 +69,7 @@
 <p><img src=/notes/contributions/y_distr.svg style="width: 100%; height: 50wv" /></p>
 <p>Получается замечательная и совершенно контринтуитивная картина: периодические довложения <em>увеличивают</em> риск портфеля в смысле неопределённости полученной доходности (и не дают прироста доходности, что уже ожидаемо). Переход от ежегодных довложений к ежемесячным картину не меняет, а от фиксированных в реальном выражении к определяемым как процент от портфеля — даже ухудшает, как и при расчёте для портфеля 50/50 акции/облигации. Т.е. хотя сама динамика размера портфеля может казаться лучше, всё улучшение происходит от «заливания проблемы бесплатными деньгами». Как только мы начинаем учитывать стоимость этих денег, считая внутреннюю норму доходности, проблема начинает проявлять себя.</p>
 <p>Рискну предположить, что дело здесь в наличии затяжных бычьих/медвежьих рынков: довложения в такой рынок усиливают эффект от разворота, получаемый на выходе. В 20% худших случаев мы продолжаем вкладываться в пузырь, который потом развернётся, обрушив доходность; в 20% лучших — наоборот: продолжаем вкладываться в просадку, которая при развороте даёт нам опережающую доходность.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
