--- a/notes/diversification_math/index.html
+++ b/notes/diversification_math/index.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Рассмотрим сферический фондовый рынок в вакууме, на котором обращается 10000 акций. Т.к. рынок сферический и в вакууме, компании никак не взаимодействуют ни друг с другом, ни со внешней средой, дивидендов поэтому тоже не платят. Вся доходность акции заключается в изменении её цены. Цены изменяются независимо друг от друга на случайный процент вверх или вниз каждый шаг моделирования. Начальной ценой всех акций возьмём 1.</p>
 <p>Вот так будет выглядеть распределение цен акций через условные 10 лет моделирования.</p>
 <p><img src=/notes/diversification_math/price_dist_10y.svg style="width: 100%; height: 50wv" /></p>
@@ -83,6 +83,7 @@
 <p>Получилось забавное противоречие с господствующими школами мысли. Ведь сторонники гипотезы эффективного рынка выступают за взвешенные по капитализации портфели, а сторонники поиска неэффективностей — как минимум — за равновзвешенные. Поддержание равной балансовой стоимости акций выглядит неплохим нейтральным вариантом.</p>
 <p>Какой из этих вариантов лучше соответствует реальному рынку — я не знаю. На данный момент я руководствуюсь промежуточной моделью: считаю колебания капитализаций отраслей случайными и ребалансируюсь между отраслями, но внутри отраслей ребалансировку не произвожу. Однако сложность этой модели меня утомляет и я хочу её упростить.</p>
 <p>Исходники моделей: <a href="/notes/diversification_math/vol.py">рынок</a>, <a href="/notes/diversification_math/vol2.py">довложения и ребалансировка</a>.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
