--- a/notes/factors/index.html
+++ b/notes/factors/index.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <div class="toc">
 <ul>
 <li><a href="#capm">Историческая справка: CAPM, альфа, бета, и факторы</a></li>
@@ -717,6 +717,7 @@
 <li>Собирать руками портфель из фондов на отдельные факторы — аналогичная история.</li>
 <li>Дешёвое плечо <em>значительно</em> лучше значимого перевеса в SmallCaps.</li>
 </ol>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
