--- a/notes/fairprice.html
+++ b/notes/fairprice.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Рассмотрим модельную деревню, в которой есть только хлеборобы и сапожники, а денег нет. На ярмарку они привозят G мер зерна и B пар сапог. Что не получилось обменять до следующей ярмарки пропадёт — сгниёт или мыши съедят, поэтому торговаться будут до последнего и обменяют всё на всё. Тогда «цена» пары сапог окажется G/B мер зерна, а «цена» меры зерна, соответственно, — B/G пар сапог.</p>
 <p>Эти «цены» вполне удовлетворяют представлениям о справедливости обоих сторон — ничей труд напрасно не пропал, хотя, возможно, и получено за него было менее ожидаемого. А вот если какой-то «просвещённый барин» решит, что, скажем, сапожники должны за пару сапог получать больше зерна, то часть сапожников продать свой товар не успеет (зерно кончится раньше чем сапоги), и умрёт с голоду. Эти же непроданные сапоги не достанутся тогда каким-то крестьянам, они простудятся, заболеют, и тоже умрут. В обратную сторону результат примерно тот же.</p>
 <p>Обратите внимание, что такая справедливая цена, при которой и крестьяне обуты, и сапожники накормлены, не включает в себя ни себестоимость, ни трудозатраты. Только количество зерна и сапог на рынке. А результат деятельности просвещённых социалистических бар, которые берутся рассчитывать «справедливую» цену из себестоимости, трудозатрат, степени квалифицированности труда и прочих параметров, мы уже увидели.</p>
@@ -72,6 +72,7 @@
 <li><strong>Смысл существования государства — в поддержании эффективности рынка и снижении транзакционных издержек</strong>, а не их искусственном создании, как в утопически-социалистических моделях.</li>
 </ul>
 <p>Устремления людей в отношении как потребления, так и производства (чем и как заниматься) глубоко индивидуальны, субъективны и переменчивы. Рыночная цена при отсутствии транзакционных издержек и <strong>экстерналий</strong> (воздействий на среду, которые не учитываются при принятии экономических решений) взвешивает их все так, чтобы они были удовлетворены наилучшим образом. Никакая машина a priori рассчитать эту цену не сможет. Вот до чего мы уже договорились даже на доденежном уровне, самому удивительно.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
@@ -90,7 +91,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/market_to_gdp"> &lt;&lt; Рост ВВП, прибыли компаний, капитализация и доходность рынка акций </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/workersfactories"> Фабрики — рабочим &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/notes/holywars"> &lt;&lt; О спорных терминах </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/workersfactories"> Фабрики — рабочим &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
