--- a/notes/fallacies.html
+++ b/notes/fallacies.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>По мотивам обсуждений в <a href="https://t.me/RationalAnswer_Chat">чате Павла Комаровского</a>.</p>
 <p>В <a href="/notes/recklessness">предыдущей статье</a> я прошёлся по типичным отговоркам, а здесь распишу типичные <em>установки</em>, которые к таким отговоркам приводят.</p>
 <div class="toc">
@@ -90,6 +90,7 @@
 <p>Во-первых, см. предыдущий пункт.</p>
 <p>Во-вторых, инвестиции в себя — это приобретение знаний и навыков, знакомств и связей. Учебные материалы все давно в открытом доступе. Бесплатных/free donation/за символические деньги выставок, конференций, meetup'ов, workshop'ов, походов, концертов и прочих тусовочных мероприятий — тоже хоть отбавляй, даже в провинции.</p>
 <p>Деньги тут не нужны, нужны силы и время. А вот если все силы и время отдаются зарабатыванию денег для поддержания «уровня жизни» — возможностей увеличивать доходы и не остаётся.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
