--- a/notes/finplan.html
+++ b/notes/finplan.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Любимый «продукт» всех финансовых советников. Большого ума для составления не надо, а денег можно взять много. За «сопровождение» в том числе.</p>
 <p>Практической пользы в этом нет никакой. Польза — в <a href="/literacy/reserves">разнесении своих денег по целевым счетам</a>.</p>
 <ol>
@@ -79,6 +79,7 @@
 <li>Система динамична и мгновенно учитывает изменение ваших приоритетов (на какой цели больше денег — та и в приоритете) и общую финансовую ситуацию. В случае изменений не надо ничего переделывать и перепланировать — вы просто перераспределяете деньги между счетами в обычном режиме. А как это влияет на сроки достижения целей и необходимые суммы отчислений — оцениваете на <a href="/calculators/compounding">калькуляторах</a>.</li>
 </ol>
 <p>Ещё одно бесполезное упражнение от советников — оценка своего финансового положения, которое заключается в выписывании рыночной стоимости всех имуществ и объёма всех долгов. Я даже не думаю, что таким образом можно напугать человека, у которого ипотечная квартира и дорогая кредитная машина, а все доходы он проматывает. Он в курсе. Остальным это тем более незачем.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
