--- a/notes/index.html
+++ b/notes/index.html
@@ -56,8 +56,8 @@
                 <p class="description">Краткие заметки в систематическом порядке</p>
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <h2 id="_1">Личные финансы</h2>
 <ol>
 <li><a href="/notes/capital">Зачем нужен капитал</a></li>
@@ -96,6 +96,7 @@
 <li><a href="/notes/accounting">Как и зачем я веду учёт личных финансов</a></li>
 <li><a href="/notes/myportfolio">Мой портфель ценных бумаг и стратегия использования брокерских счетов</a></li>
 </ol>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
