--- a/notes/inflation.html
+++ b/notes/inflation.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>«Инфля́ция (лат. inflatio «вздутие») — повышение общего уровня цен на товары и услуги на длительный срок.» — говорит нам <a href="https://ru.wikipedia.org/wiki/Инфляция">Википедия</a>.</p>
 <p>Измеряют её, соответственно, сравнивая цены на товары и услуги в разные моменты времени. Разные наборы товаров и услуг определяют разные <em>индексы</em>. Наиболее часто используемый индекс — индекс потребительских цен (ИПЦ, <a href="https://www.fedstat.ru/indicator/33568">общий</a>, <a href="https://www.fedstat.ru/indicator/31074">по отдельным товарам и группам</a>). Его особенность в том, что он составляется по практически полному набору товаров и услуг (включая даже недвижимость и зарубежный отдых), причём веса при ценах соответствуют доле расходов на них у среднестатистического потребителя (<a href="https://www.fedstat.ru/indicator/31448">цены на товары и услуги</a>, <a href="https://www.fedstat.ru/indicator/37053">доли товаров и услуг в потребительской корзине</a>). Таким индексом практически невозможно манипулировать, он действительно отражает изменение расходов обычного потребителя (<a href="https://at6.livejournal.com/27831.html">пример</a>, у меня нет такой длинной истории, но результаты тоже примерно соответствуют). Именно такого рода индекс берут за ориентир по инфляции практически все центробанки. Однако этот способ формализации инфляции приводит к включению в неё такого широкого спектра факторов, что показатель теряет всякую информативность. Рассмотрим эти факторы.</p>
 <h2 id="_1">Составляющие инфляции</h2>
@@ -108,6 +108,7 @@
 <p>Третья проблема, как я уже писал выше, — от структурной «инфляции», которая вовсе не инфляция, но может восприниматься как таковая ЦБ, из-за несовершенства средств измерения. Неверно интерпретировав сигнал от ИПЦ, центробанк может начать предпринимать действия, прямо ухудшающие работу экономики. К счастью, центробанки как правило осторожны и пристально следят за последствиями своих решений, поэтому неверная политика скорее всего будет быстро отменена. Хотя относительно европейского центробанка у меня в этом отношении есть некоторые сомнения, но ему приходится единой политикой регулировать чудовищно различные по своему состоянию экономики (за цену <a href="https://www.numbeo.com/cost-of-living/in/Podgorica">обеда в Черногории</a> во Франции <a href="https://www.numbeo.com/cost-of-living/in/Paris">едва чашку кофе нальют</a>), так что ему там всё равно должно быть виднее.</p>
 <p>Разделить все эти эффекты — практически невозможно, и ошибки (иногда фатальные) — неизбежны.</p>
 <p>Поэтому моя надежда на криптовалюты — в том, что абсолютная прозрачность транзакций и алгоритмизация эмиссии позволит построить точный автоматический регулятор наполнения деньгами различных секторов экономики, сделать экономический рост идеально ровным, а распределение богатства — рыночно-справедливым. К сожалению, криптовалютное сообщество настолько дремуче в экономическом плане, что упорно строит валюты по подобию золота, хотя катастрофические последствия отката на такую систему денежного обращения — вполне очевидны. <a href="/literacy/instruments/crypto">И вообще там всё плохо.</a></p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
@@ -126,7 +127,7 @@
     </main>
 
     <footer>
-
+<div class="prevupnext"><a class="prev" href="/notes/volatility"> &lt;&lt; Волатильность как мера риска </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/bonds_in_portfolio"> Облигации в инвестиционном портфеле &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
