--- a/notes/market_to_gdp/index.html
+++ b/notes/market_to_gdp/index.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>По мотивам обсуждений в <a href="https://t.me/RationalAnswer_Chat">чате Павла Комаровского</a>.</p>
 <div class="toc">
 <ul>
@@ -125,6 +125,7 @@
 <p>Можно сказать, что Германия — «плохой» пример, но все «хорошие» примеры будут связаны с недооценкой рынков по фундаментальным показателям, которая никак не связана с долей этой страны в мировом ВВП.</p>
 <p>Разумеется, что для частного инвестора, который не может сколь-нибудь значимым образом двигать рынки, но хочет снизить влияние на свой портфель пузырей на локальных рынках, такое взвешивание может быть оправданным и даже удобным. Однако результаты сколь-нибудь крупного инвестиционного фонда, использующего эту стратегию, скорее всего, будут весьма удручающими. Возможно, именно поэтому, несмотря на довольно длительную историю взвешенных по ВВП индексов и их убедительного опережения взвешенных по капитализации, такие фонды остаются неизвестными.</p>
 <p>А для избегания локальных пузырей взвешивание на основе того же CAPE выглядит гораздо более обоснованным.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
