--- a/notes/marketprice.html
+++ b/notes/marketprice.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Много шуму в кругах наделала книга Александра Силаева <a href="https://www.alpinabook.ru/catalog/book-555670/">«Деньги без дураков»</a>, в которой автор со всех сторон пытается доказать, что «пассивного дохода на капитал нет». Отметились и <a href="https://fintraining.livejournal.com/1107457.html">Сергей Спирин</a>, и <a href="https://mobile.twitter.com/Rational_Answer/status/1163884047413760000">Павел Комаровский</a>, а Григорий Барщевский и вовсе <a href="https://gregbar.livejournal.com/895518.html">обрушился с разгромной критикой</a>. Аргументацию «противной стороны» — фундаментальных инвесторов ­— чеканно сформулировал <a href="https://forum.roundabout.ru/viewtopic.php?p=74135#p74135">Валуа Второй</a> (обсуждение на форуме тоже интересно почитать):</p>
 <blockquote>
 <p>Я предлагаю мыслить примерно так: компании будут закладывать в цены товаров и услуг все издержки, которые примерно равны товарной инфляции + они будут закладывать некоторую норму прибыли. Следовательно прибыли компаний за ряд лет будут отбивать инфляцию с избытком. Темпу роста прибыли будет соответствовать динамика капитализации компаний. Следовательно акции компаний будут наиболее доходным инструментом, но и более волатильным. Это надо учитывать при формировании и управлении портфелем. Облигации будут давать меньшую доходность потому, что это долговое обязательство бизнеса, но ни кто в здравом уме не будет занимать под процент, который сожрёт всю потенциальную прибыль. Значит доход по облигациям будет являться только какой-то частью прибыли, и следовательно доходность облигаций будет ниже, но гарантированный купонный доход, и гарантированный срок гашения облигации делает этот инструмент менее рискованным и менее волатильным.</p>
@@ -93,6 +93,7 @@
 </li>
 </ol>
 <p>Итак. Несмотря на то, что некоторая (и, возможно, весьма значительная — я не представляю как это посчитать) часть прошлой доходности фондового рынка обусловлена факторами, которые уже не действуют, нынешним пассивным инвесторам ещё есть на чём получить свои 5%г реальной доходности. Во-первых, за счёт портфельного эффекта между классами и подклассами активов на более длинном временно́м горизонте чем в среднем по рынку. Во-вторых, за счёт взрывного роста компаний на новых рынках (как это и всегда было). А вот Global Market Portfolio, в котором все активы мира взвешены по их капитализации (т.е. портфель идеального силаевского пассивного инвестора, в точности соответствующего рынку капиталов) — таки да, скорее всего будет иметь доходность околонулевую.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
