--- a/notes/markettiming/index.html
+++ b/notes/markettiming/index.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>По мотивам статьи <a href="https://ofdollarsanddata.com/why-market-timing-can-be-so-appealing/">Ника Маггиулли</a> (<a href="https://assetallocation.ru/why-market-timing-can-be-so-appealing/">перевод Сергея Спирина</a>).</p>
 <p>Волатильность фондового рынка такова, что примерно 75% времени ваш портфель акций находится в состоянии затяжного падения с предыдущего абсолютного максимума до следующего абсолютного минимума (под ними я здесь подразумеваю максимум, которого никогда не было ранее и минимум, который никогда более не повторится; high water mark (HWM) и low water mark (LWM) в англоязычной литературе).</p>
 <p><img src=/notes/markettiming/stocks_min_max.svg style="width: 100%; height: 50wv" /></p>
@@ -75,6 +75,7 @@
 <p><img src=/notes/markettiming/stocks_abs_outperf.svg style="width: 100%; height: 50wv" /></p>
 <p>В 20% случаев она отстаёт, и очень сильно отстаёт. Очень многие, попав в такой неудачный момент, могут не выдержать, сравнивая свои результаты с базовым сценарием, и просто зафиксировать убыток.</p>
 <p>В общем, не выбирайте время для покупки акций. Если есть деньги, которые вы можете скормить рынку, — скармливайте сразу. Даже ГосподьБог не может получить результат сильно лучше.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
