--- a/notes/myportfolio.html
+++ b/notes/myportfolio.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <div class="toc">
 <ul>
 <li><a href="#_1">Основополагающие принципы</a></li>
@@ -144,6 +144,7 @@
 <li>Для балансировки базового американского индекса у меня куплены отраслевые фонды. Возможно, удобнее не покупать недостающее, а продавать в короткую излишнее.</li>
 <li>Подумываю над тем, чтобы перевести ИИС из ВТБ в Сбер, из-за очень жирной премиальной программы.</li>
 </ol>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
@@ -162,7 +163,7 @@
     </main>
 
     <footer>
-
+<div class="prevupnext"><a class="prev" href="/notes/accounting"> &lt;&lt; Как и зачем я веду учёт личных финансов </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
