--- a/notes/piketti2/index.html
+++ b/notes/piketti2/index.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>В предыдущей заметке с <a href="/notes/piketti">критикой Пикетти</a> мы остановились на том, что социальное расслоение не порождается само по себе экономическим ростом и оторванной от него отдачей на капитал, а требует отдельной модели. Я буду опираться на рассуждения и расчёты Лекса Кравецкого (изложены они довольно пространно: <a href="https://22century.ru/popular-science-publications/orlyanka2">1 часть</a>, <a href="https://22century.ru/popular-science-publications/orlyanka3">2 часть</a>), но предложу более простую модель.</p>
 <p>Человек всю жизнь принимает решения и с ним происходят какие-то события. Они, прямо или косвенно, приводят к тому, что доля приходящихся на человека благ увеличивается или уменьшается. За счёт остальных людей или создания новых благ — сейчас не важно: мы рассматриваем модель неравенства, а не экономического роста. Неравенство в капитале, как мы увидели в предыдущей статье, определяется преимущественно неравенством в доходе. Конечно, оно будет дополнительно усиливаться за счёт того, что люди с высоким достатком имеют обычно и более высокую норму сбережения, но, т.к. это эффект вторичный, сосредоточимся здесь на неравенстве в доходе. Люди, имеющие высокий доход/капитал, имеют и больше возможностей, и больше рисков их потерять (и наоборот), поэтому будем считать, что принимаемые решения изменяют получаемую человеком долю благ на определённый процент, а не на абслютную величину. Наконец, будем эти изменения считать абсолютно случайными.</p>
 <p>Начав с идеально равномерного распределения благ в обществе, мы очень быстро приходим к характерному для практически всех обществ логнормальному, как на этом рисунке.</p>
@@ -84,6 +84,7 @@
 <p>Распределение благ не равномерное, как в предыдущих примерах, а только в пользу бедных (25% беднейших на следующем графике), значительно снижает неравенство. При этом, вопреки моим опасениям, средний класс не вымывается.</p>
 <p><img src=/notes/piketti2/y_dist_social_tax.svg style="width: 100%; height: 50wv" /></p>
 <p>Ещё одно замечание, которое я хотел бы сделать в связи с налогами. Оценивать и регулировать неравенство в рыночной экономике, где практически все блага пересчитаны в деньги — достаточно просто: считай доход, облагай налогом, полученные деньги перераспределяй. В плановой экономике, где действуют те же законы, но доступ к благам определяется не деньгами, а разного рода привилегиями и связями — это гораздо сложнее.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
