--- a/notes/recklessness.html
+++ b/notes/recklessness.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>В продолжение <a href="/notes/capital">заметки про капитал</a>, разберём отговорки, которые обычно используются людьми, практикующими финансовое саморазрушение.</p>
 <h2 id="1">1. «Мне не хватает»</h2>
 <p>Если исключить случаи крайней бедности, когда приходится выбирать между едой, одеждой и коммуналкой, — это признак расточительства. Впрочем, необходимость выбирать между едой, одеждой и коммуналкой также может отсюда происходить.</p>
@@ -81,6 +81,7 @@
 <li><strong>Самое главное.</strong> Он не улучшает финансовое положение; вы просто поднимаетесь над пропастью, чтобы больнее упасть. Ведь даже в случае успеха, ваш доход равен вашим тратам. А снижать расходы — болезненно. Физически болезненно и уничтожает морально. Т.е. вы достигли только того, что усилили свою боль при неизбежном снижении своей продуктивности. Успешный самодостаточный бизнес с таким подходом построить едва ли удастся, потому что бизнес — это про снижение издержек и разумное реинвестирование прибыли. А подход провоцирует на риск и изъятие прибыли (а то и выручки) на текущее потребление владельца.</li>
 </ol>
 <p>Что делать — очевидно: не меньше 20–30% доходов идут в сбережения сразу, рост доходов должен опережать рост расходов (в относительном измерении: скажем, на рост доходов на 20% отвечаем ростом расходов на 5–10), рискуем либо уже заработанными деньгами (но в капитал не залезаем), либо чужими (которые в случае провала не надо возвращать).</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
