--- a/notes/system.html
+++ b/notes/system.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>В целом, схема моих денежных потоков выглядит примерно таким образом. На прямоугольники можно щёлкать, страница перелистнётся на соответствующий раздел.</p>
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
@@ -225,6 +225,7 @@
 <p>Уходит без проблем. Банку нужно прислать брокерский договор и уведомление об открытии счёта (запрашивал у техподдержки на ib_tallinn@interactivebrokers.ee, отправили в тот же день).</p>
 <p>Выводить рекомендуют в долларах: с рублёвыми платежами от нерезидентов всё очень зарегулировано и они обычно возвращаются обратно. Я даже не пытался.</p>
 <p>Брокер хорош очень дешёвым маржинальным кредитованием, что позволяет не держать крупных резервов, а, в случае острой надобности, вывести деньги под залог акций (дивидендная доходность всё равно выше стоимости кредита, но осторожность и предусмотрительность требуются).</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
@@ -243,7 +244,7 @@
     </main>
 
     <footer>
-
+<div class="prevupnext"><a class="prev" href="/notes/aboutme"> &lt;&lt; Кто я и как дошёл до жизни такой </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/referrals"> Реферальные ссылки &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
