--- a/pages/calculators.html
+++ b/pages/calculators.html
@@ -57,8 +57,8 @@
                 <p class="description">На странице собраны ссылки на различные мои финансовые калькуляторы.</p>
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <ol>
 <li><a href="/calculators/cards">Расчёт выгоды от использования банковских карт</a><ul>
 <li>Потери от хранения денег в наличности и на счетах под низкий процент</li>
@@ -74,6 +74,7 @@
 </ul>
 </li>
 </ol>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
