--- a/literacy/basebank.html
+++ b/literacy/basebank.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>Базовый банк — то место, откуда вы управляете своими денежными потоками. Вести все свои дела из одного банка удобно, однако выгодные предложения для разных целей обычно бывают в разных банках, да и для безопасности своих финансов разумно их разделять между несколькими.</p>
 <p>В базовом банке вы храните оперативный резерв и резерв предстоящих расходов. На деньги обязательно должны начисляться проценты, чтобы хоть как-то компенсировать их обесценение, и эти проценты должны быть не подачкой от банка, а нормальной среднерыночной ставкой. Обычные варианты для хранения — <em>накопительный счёт</em> и <em>расходно-пополняемый вклад</em>. Можно также хранить деньги на <em>доходной карте</em> (дебетовой карте, на остаток по которой начисляется высокий процент), но этот вариант считается более рискованным.</p>
 <p>Подводных камней здесь <a href="/literacy/deposits">великое множество</a>, поэтому, если банк устанавливает дополнительные условия по начислению процентов или бесплатности обслуживания, убедитесь, что вы можете их стабильно выполнять не «в принципе», а с учётом сложившейся практики и альтернативных издержек: например, не стоит без расчёта переносить расходы с карт с кэшбэком на доходные — обычно это приводит к большей потере денег, чем неначисленные проценты. <strong>И никогда не ведитесь на ставки в рекламных баннерах. Всегда внимательно читайте условия по вкладу/карте и рассчитывайте свой случай. И всегда следите за изменением условий.</strong></p>
@@ -67,6 +67,7 @@
 <p>Так как деньги из оперативного резерва нужно рассылать по разным банкам (и, возможно, пополнять этот резерв из разных банков), все виды <a href="/literacy/moneytransfer">денежных переводов</a> через базовый банк должны быть бесплатны в тех пределах, в которыми вы будете ими пользоваться. Даже при возможности бесплатного пополнения резерва с зарплатной карты другого банка, получение з/п лучше перевести в базовый банк чтобы минимизировать <a href="/literacy/moneytransfer#transit">транзит</a>.</p>
 <p>Разумеется, базовое обслуживание в базовом банке должно быть бесплатным <em>для вас</em>. Необязательно вышеперечисленное будет бесплатным в основных тарифах. Банки обычно предлагают некоторые свои сервисы бесплатно тем, кто получает з/п на карту этого банка или открыл в нём крупный вклад. Платные тарифы (обычно прилагаются к карточкам разной степени премиальности) тоже не надо сбрасывать со счетов: возможно, плюшки по этим тарифам (например, повышенный кэшбэк или туристическая страховка) принесут денег больше, чем стоит его обслуживание; но базовое обслуживание в расчёте этой экономии учитывать нельзя — оно должно быть бесплатным безусловно.</p>
 <p>Если базовый банк выполняет лишь функции <em>диспетчера оперативного резерва</em>, то особенных требований к его надёжности нет. Однако если вы выбрали на эту роль сомнительный банк, то разумно найти ещё один, удовлетворяющий требованиям базовости, и размесить часть резервов там.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
