--- a/literacy/iis.html
+++ b/literacy/iis.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <div class="toc">
 <ul>
 <li><a href="#_1">Индивидуальный инвестиционный счёт с вычетом на взносы</a></li>
@@ -124,7 +124,7 @@
 <ol>
 <li>По итогам года финансовый результат не рассчитывается и налог на него не удерживается на обоих ИИС.</li>
 <li>Тип счёта определяется только фактом запроса у налоговой вычета на взносы. Пока не запросили — можете думать, какой вариант вам выгоднее. Но вычет на взносы можно забрать только за последние три года.</li>
-<li>Дивиденды <em>всегда</em> облагаются налогом.</li>
+<li>Убыток, рассчитанный при закрытии ИИС, нельзя ни сальдировать с другими брокерскими счетами, ни перенести на будущее даже по другому ИИС.</li>
 <li>Можно перевести ИИС от одного брокера к другому, но это весьма дорогая и жутко бюрократическая процедура (с беготнёй с кипой бумаги между обоими брокерами, а точнее даже их депозитариями), а отводится на неё всего месяц.</li>
 <li>Если вы случайно открыли второй ИИС — придётся закрыть <strong>первый</strong>, причём в течение месяца. Иначе лишитесь права на вычет по обоим.</li>
 <li>При закрытии ИИС-А можно перевести ценные бумаги на обычный брокерский счёт, тогда при их продаже можно воспользоваться трёхлетней льготой. Лучше если этот счёт будет у того же брокера, ибо предыдущий пункт. Перевод бумаг всё равно не бесплатный, как правило от 300 до 1500р за одно наименование.</li>
@@ -132,13 +132,14 @@
 <li>3 года отсчитываются от даты договора на открытие ИИС.</li>
 <li>Как вы будете распоряжаться деньгами, зачисленными на ИИС, никого не волнует.</li>
 <li>Если у вас небольшие доходы, получение купонов и дивидендов на банковский счёт с последующим возвратом на ИИС позволяет включить в вычет и их. Если вы их получаете сразу на ИИС, то указать их в декларации для получения вычета не получится.</li>
-<li>При получении купонов по облигациям на ИИС, они не облагаются налогом. Однако разные брокеры реализуют это по-разному. Одни — зачисляют купон без удержания налога, в случае ИИС-А удерживая налог при закрытии счёта. Другие — удерживают налог при выплате, а при закрытии ИИС-Б — возвращают излишне удержанный налог.</li>
+<li>При получении купонов по облигациям на ИИС, они не облагаются налогом. Однако разные брокеры реализуют это по-разному. Одни — зачисляют купон без удержания налога, в случае ИИС-А удерживая налог при закрытии счёта. Другие — удерживают налог при выплате, а при закрытии ИИС-Б — возвращают излишне удержанный налог. Однако возможна ситуация, что брокер этот налог возвращать не будет, тогда это можно сделать только через налоговую и только за последние 3 года, т.е. при более долгом сроке существования ИИС-Б льгота по НДФЛ с купонов ранних лет «сгорит». Поэтому уточняйте порядок удержания налога перед открытием ИИС. Удержание при закрытии — однозначно выгоднее.</li>
 <li>Уникальная фишка ВТБ — зачисление дивидендов на ИИС без удержания налога.</li>
 </ol>
 <h2 id="_4">Льгота по долгосрочному владению ценными бумагами (ЛДВ)</h2>
 <p>Она же трёхлетняя льгота, она же инвестиционный налоговый вычет, предусмотренный пп. 1 п. 1 ст. 219.1 НК РФ.</p>
 <p>Представляет собой налоговый вычет на доход от продажи ценных бумаг, бывших в собственности больше 3-х лет, в размере 3Мр за каждый <em>полный</em> год владения каждым наименованием бумаги. Только для бумаг, обращающихся на российских биржах. Не работает на ИИС.</p>
 <p>Как получить. После продажи бумаг направить брокеру заявление на применение льготы. Заявление требуется по закону. Вменяемый брокер сам пришлёт вам сообщение, что ваша сделка попадает под льготу и приложит форму заявления. Останется только подписать и отдать.</p>
+<p>Точный алгоритм расчёта размера льготы можно узнать <a href="https://smart-lab.ru/blog/661392.php">здесь</a>.</p>
 <h2 id="_5">Льгота на доход от продажи бумаг высокотехнологичного сектора</h2>
 <p>Даже писать не буду. И льгота до 22-го года, и в списке попадающих под неё бумаг — очевидный шлак из 5-го эшелона.</p>
 <h2 id="_6">Возможность зачесть убытки предыдущих лет</h2>
@@ -160,6 +161,7 @@
 <ol>
 <li>Не облагается налогом курсовая переоценка стоимости облигаций Минфина в валюте. Пусть вы купили облигацию по цене номинала в 1000$ при курсе 1$=60р, а в день погашения курс был 1$=70р. Если это была облигация Минфина, то налог вы не заплатите. Для других облигаций он будет <span><span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord">7</span><span class="mord">0</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span><span class="mbin">×</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span></span><span class="base"><span class="strut" style="height:0.72777em;vertical-align:-0.08333em;"></span><span class="mord">1</span><span class="mord">0</span><span class="mord">0</span><span class="mord">0</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span><span class="mbin">−</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span></span><span class="base"><span class="strut" style="height:0.72777em;vertical-align:-0.08333em;"></span><span class="mord">6</span><span class="mord">0</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span><span class="mbin">×</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">1</span><span class="mord">0</span><span class="mord">0</span><span class="mord">0</span><span class="mclose">)</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span><span class="mbin">×</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span></span><span class="base"><span class="strut" style="height:0.80556em;vertical-align:-0.05556em;"></span><span class="mord">1</span><span class="mord">3</span><span class="mord">%</span><span class="mspace" style="margin-right:0.2777777777777778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2777777777777778em;"></span></span><span class="base"><span class="strut" style="height:0.8388800000000001em;vertical-align:-0.19444em;"></span><span class="mord">1</span><span class="mord">3</span><span class="mord">0</span><span class="mord">0</span><span class="mord cyrillic_fallback">р</span></span></span></span></span>.</li>
 </ol>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
@@ -178,7 +180,7 @@
     </main>
 
     <footer>
-
+<div class="prevupnext"><a class="prev" href="/literacy/taxes"> &lt;&lt; Брокерский счёт: как рассчитываются и уплачиваются налоги </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/instruments/cash"> Наличные деньги &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
