--- a/literacy/instruments/crypto.html
+++ b/literacy/instruments/crypto.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <div class="toc">
 <ul>
 <li><a href="#_1">Общие представления</a></li>
@@ -107,6 +107,7 @@
 <p>На моё предположение об отрицательной (или хотя бы нулевой) ожидаемой доходности криптовалют часто можно услышать возражение, что, по мере того как криптовалюты будут становиться всё более общепринятым средством расчёта, их стоимость (из-за ограниченности предложения) будет расти. Эта идея представляет собой экономический оксюморон, даже если забыть об <em>огромном</em> и постоянно растущем количестве новых криптовалют (на одном только блокчейне эфира, например, разных криптовалют-токенов запущено уже почти <a href="https://etherscan.io/tokens">триста тысяч</a>). Если стоимость актива растёт, то он в дефиците, но дефицитный актив не может использоваться как средство расчёта, потому что его недостаточно для расчётов (иначе не было бы дефицита), плюс экономические агенты обычно не склонны просто так расставаться с растущими в цене активами. Чтобы какая-то криптовалюта служила средством расчётов и одновременно росла в цене, необходимо <em>законодательно обязать</em> всех экономических агентов осуществлять расчёты исключительно и только в этой криптовалюте, но даже и в этом случае они очень быстро съезжают на векселя-взаимозачёты-бартер, потому что рассчитываться дефицитным активом невозможно (Великая Депрессия и наше начало 2000-х тому примером).</p>
 <p>На аргумент о волатильности как препятствии для влючения в портфель можно было бы возразить, что по мере признания криптовалют она будет снижаться. Однако на данный момент снижения волатильности биткойна со временем замечено не было. Для снижения волатильности всё-таки требуется наличие механизмов внешнего управления курсом/эмиссией, что в корне противоречит идеологии большинства современных криптовалют.</p>
 <p>Таким образом, криптовалюты остаются исключительно спекулятивным активом, не дающем ни хотя бы нулевой реальной доходности, ни диверсификации (понимаемой как снижение риска портфеля, а не простое набивание его активами).</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
@@ -125,7 +126,7 @@
     </main>
 
     <footer>
-
+<div class="prevupnext"><a class="prev" href="/literacy/instruments/stocks"> &lt;&lt; Акции </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/exchange"> Как происходят торги на бирже &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
