--- a/literacy/portfolio_tldr.html
+++ b/literacy/portfolio_tldr.html
@@ -52,8 +52,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <h2 id="_1">Общие представления</h2>
 <p>Способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий <strong>не существует</strong>. Хуже того, способов гарантированно сохранить свой капитал тоже <strong>не существует</strong>.</p>
 <p>Наилучшее, что мы можем — это составить портфель из таких активов и в таких пропорциях, чтобы максимизировать доходность при заданном уровне риска (<em>ожидаемой</em> потери капитала в процессе или результате инвестирования), или минимизировать риск при заданной доходности.</p>
@@ -99,6 +99,7 @@
 <li>Альтернативные взвешивания (не по капитализации, а по ВВП или в равных долях) макрорегионов/стран в портфеле <a href="https://capital-gain.ru/posts/global-weighting/">возможны</a>, и даже могут несколько увеличить доходность портфеля, но такие портфели получаются более волатильными.</li>
 <li>Для небольших домашних рынков (как РФ) в ряде случаев может быть разумно иметь их на бо́льшую долю в портфеле, чем в мировой капитализации (до 20%), но только для компенсации краткосрочных инфляционных рисков. В долгосрочном портфеле, как замечательно рассказал Дмитрий Никитенко в своём недавно разборе, <a href="https://capital-gain.ru/posts/home-country-bias/">отклонения от мирового портфеля бессмысленны, если не вредны</a>.</li>
 </ul>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
