--- a/notes/diversification_math2/index.html
+++ b/notes/diversification_math2/index.html
@@ -58,8 +58,8 @@
 
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <p>От абстрактного рынка перейдём к реальному. Как обычно, к американскому: по нему просто больше всего данных и к этим данным меньше всего вопросов (да и сам рынок повидал практически всё). В качестве исходных данных возьмём <a href="http://www.econ.yale.edu/~shiller/data/ie_data.xls">таблицы Шиллера</a>, и пересчитаем в <a href="/notes/diversification_math2/stats.xls">индексы полной реальной доходности с 1928 года</a>.</p>
 <p>Посмотрим как распределены реальные доходности базовых инструментов на всех возможных десятилетних периодах (с графиками такого типа мы уже познакомились в <a href="/notes/diversification_math">предыдущей статье</a>). Графики будут неровные, т.к. это реальные данные, а не идеальная модель. Ожидаемая доходность лежит точно посредине графика.</p>
 <p><img src=/notes/diversification_math2/yield_distr.svg style="width: 100%; height: 50wv" /></p>
@@ -89,6 +89,7 @@
 <p>Вероятность получить полный провал на портфеле, целиком состоящем из акций, в первые годы весьма велика и первые 10 лет только растёт, однако с дальнейшим увеличением горизонта инвестиций снижается. Важно понимать, что этот график смотрит «назад», а не «вперёд». Т.е. по итогам каждого завершившегося года у вас может быть просадка 45% относительно базового сценария (5%г реальной доходности), по итогам последних 10 лет — 65%, а вот по итогам 30 лет — едва ли 30%. Облигации, очевидно, требуемую реальную доходность дать не могут, но за несколько лет сильно не обесценятся, а с увеличением горизонта риск стремится к 100%.</p>
 <p>А вот сбалансированный портфель 60/40 стабилизируется в районе долгосрочной доходности около 2,5%г (если пересчитать в годовую доходность с учётом итоговой потери капитала), при которой на 30 годах даёт просадку в размере капитала не более 30% (как в лучшую, так и в худшую стороны). Но при этом, это уже та доходность, на которую можно при планировании рассчитывать. Для сравнения, для акций такая «надёжная» доходность на горизонте 30 лет — 4%г (на 15 годах падает до 2,4%г, а на пяти — до 1,9%г); для облигаций — 1,3, 1,8 и 2,9%г для 30, 15 и 5 лет соответственно.</p>
 <p>Ссылки на исходные данные в начале статьи, <a href="/notes/diversification_math2/risk.py">код для расчёта и построения графиков</a>.</p>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
