--- a/pages/literacy.html
+++ b/pages/literacy.html
@@ -57,8 +57,8 @@
                 <p class="description">Заметки по финансовой грамотности в систематическом виде.</p>
         </div>
     </header>
-
     <div class="content">
+        <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
         <h2 id="_1">Основы</h2>
 <ol>
 <li><a href="/literacy/intro">Введение</a></li>
@@ -79,6 +79,7 @@
 <li><a href="/literacy/cards">Банковские карты</a></li>
 <li><a href="/literacy/instruments">Краткий обзор инструментов сбережения. Во вкладывать деньги и во что — нет</a></li>
 </ol>
+        <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
